--- a/.github/workflows/deploy-notebooks.yml
+++ b/.github/workflows/deploy-notebooks.yml
@@ -25,11 +25,11 @@ jobs:
     steps:
       # 1. Checkout del código
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       
       # 2. Configurar Python
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
       
@@ -44,12 +44,13 @@ jobs:
         run: |
           mkdir -p book
           cp -r notebooks/* book/
+          cp logo.png book/
           
           # Crear _config.yml
           cat > book/_config.yml << 'EOF'
           title: Heart Disease Prediction - MLOps
           author: Jose Menco, Iván Ramirez, Camilo Vargas
-          logo: ""
+          logo: logo.png
           
           execute:
             execute_notebooks: "off"  # No ejecutar notebooks (ya tienen outputs)
@@ -129,18 +130,18 @@ jobs:
       
       # 6. Configurar GitHub Pages
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v5
       
       # 7. Subir artefacto para Pages
       - name: Upload Pages Artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
           path: book/_build/html
       
       # 8. Desplegar a GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
       
       # 9. Mostrar URL de despliegue
       - name: Display Deployment URL
