--- a/.github/workflows/deploy-notebooks.yml
+++ b/.github/workflows/deploy-notebooks.yml
@@ -1,67 +1,53 @@
 name: Deploy Notebooks with Jupyter Book
 
-# Ejecutar en push a main
 on:
   push:
-    branches:
-      - main
-  workflow_dispatch:  # Permitir ejecución manual
+    branches: [main]
 
-# Permisos necesarios para GitHub Pages
+env:
+  BASE_URL: /${{ github.event.repository.name }}
+
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Evitar despliegues concurrentes
 concurrency:
-  group: "pages"
+  group: 'pages'
   cancel-in-progress: false
 
 jobs:
-  build-and-deploy:
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    
     steps:
-      # 1. Checkout del código
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
       
-      # 2. Configurar Python
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      
+      - uses: actions/setup-node@v4
         with:
-          python-version: '3.10'
+          node-version: 18.x
       
-      # 3. Instalar Jupyter Book y dependencias
-      - name: Install Jupyter Book and Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install jupyter-book matplotlib seaborn pandas numpy scikit-learn joblib
+      - name: Install Jupyter Book (via myst)
+        run: npm install -g jupyter-book
       
-      # 4. Crear estructura de Jupyter Book
-      - name: Create Jupyter Book Structure
+      - name: Create Book Structure
         run: |
-          rm -rf book
-          mkdir -p book
-          cp notebooks/*.ipynb book/
-
-          # Copiar dataset si existe, pero dentro de una carpeta dedicada
-          if [ -f notebooks/heart.csv ]; then
-            mkdir -p book/data
-            cp notebooks/heart.csv book/data/
-          fi
-
-          cp logo.png book/
+          mkdir -p notebooks
+          cp notebooks/*.ipynb notebooks/ 2>/dev/null || true
+          cp logo.png notebooks/ 2>/dev/null || true
           
-          # Crear _config.yml
-          cat > book/_config.yml << 'EOF'
+          cat > notebooks/_config.yml << 'EOF'
           title: Heart Disease Prediction - MLOps
           author: Jose Menco, Iván Ramirez, Camilo Vargas
           logo: logo.png
           
           execute:
-            execute_notebooks: "off"  # No ejecutar notebooks (ya tienen outputs)
+            execute_notebooks: "off"
           
           html:
             use_repository_button: true
@@ -71,17 +57,9 @@ jobs:
           repository:
             url: https://github.com/${{ github.repository }}
             branch: main
-          
-          sphinx:
-            config:
-              html_theme: sphinx_book_theme
-              html_theme_options:
-                repository_url: https://github.com/${{ github.repository }}
-                use_repository_button: true
           EOF
           
-          # Crear _toc.yml (Table of Contents)
-          cat > book/_toc.yml << 'EOF'
+          cat > notebooks/_toc.yml << 'EOF'
           format: jb-book
           root: intro
           chapters:
@@ -91,8 +69,7 @@ jobs:
               title: "2. Model Training Pipeline"
           EOF
           
-          # Crear intro.md
-          cat > book/intro.md << 'EOF'
+          cat > notebooks/intro.md << 'EOF'
           # Heart Disease Prediction - MLOps Project
           
           ## Descripción
@@ -131,38 +108,16 @@ jobs:
           - Camilo Vargas
           EOF
       
-      # 5. Construir Jupyter Book
-      - name: Build Jupyter Book
+      - name: Build HTML Assets
         run: |
-          cd book
-          jupyter-book build .
-          
-          # Verificar que se creó el directorio de salida
-          if [ ! -d "_build/html" ]; then
-            echo "Error: book/_build/html no fue creado"
-            exit 1
-          fi
-          
-          echo "✓ Jupyter Book construido exitosamente"
-          ls -la _build/html
+          cd notebooks
+          jupyter-book build --html
       
-      # 6. Configurar GitHub Pages
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      
-      # 7. Subir artefacto para Pages
-      - name: Upload Pages Artifact
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: book/_build/html
+          path: 'notebooks/_build/html'
       
-      # 8. Desplegar a GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-      
-      # 9. Mostrar URL de despliegue
-      - name: Display Deployment URL
-        run: |
-          echo "✓ Notebooks desplegados exitosamente!"
-          echo "URL: ${{ steps.deployment.outputs.page_url }}"
