--- a/.github/workflows/deploy-notebooks.yml
+++ b/.github/workflows/deploy-notebooks.yml
@@ -8,7 +8,7 @@ env:
   BASE_URL: /${{ github.event.repository.name }}
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
